--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,11 +2,17 @@
     text-decoration: none;
 }
 
+body{
+    margin: 0px;
+}
+
 /* Barra de navegación */
 nav {
+    background-color: white;
     display: flex;
     justify-content: space-between;
     height: 2.5rem;
+    padding-bottom: 20px;
 }
 
 .barra-navegacion ul{
@@ -39,6 +45,9 @@ nav {
 }
 /* Fin barra navegación */
 
+hr{
+    margin: 0px;
+}
 
 /* Inicio */
 /* Banner de la página inicio */
