--- a/assets/css/reserva.css
+++ b/assets/css/reserva.css
@@ -1,4 +1,4 @@
-.main{
+/* .main{
     width: 900px;
     background-color: antiquewhite;
     padding: 0px 20px;
@@ -35,5 +35,48 @@
     border-bottom: 1px solid #000;
     background-color: #e6e6e66b;
     padding: 5px;
+} */
+
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
 
+h1, a{
+    width: 100%;
+    text-align: center;
+    background-color: aqua;
+}
+
+form{
+    width: 30%;
+    background-color: brown;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1.5rem;
+    margin-bottom: 3%;
+}
+
+form label, form input{
+    margin-bottom: 0.8rem;
+}
+
+form label{
+    width: 35%;
+}
+
+form input{
+    width: 65%;
+}
+
+form button{
+    align-self: center;
+    margin-top: 0.8rem;
+    width: 100%;
+}
