--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,12 +7,12 @@ body{
 }
 
 /* Barra de navegación */
-nav {
-    background-color: white;
+.barra-navegacion {
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     height: 2.5rem;
-    padding-bottom: 20px;
+    padding-bottom: 1.25rem;
 }
 
 .barra-navegacion ul{
@@ -31,12 +31,10 @@ nav {
 }
 
 .barra-navegacion ul li a:hover{
-    border-bottom: 4px solid #d74898;
+    border-bottom: .25rem solid #d74898;
 }
 
-.barra-navegacion ul li a:target{
-    border-bottom: 4px solid #d74898;
-}
+
 
 /*  ################ Página de Inicio ################  */
 
@@ -116,7 +114,7 @@ footer{
 
 .usuario-cuadro{
     padding: 10rem;
-    background-color: rgb(0, 81, 255);
+    background-color: #0051ff;
     border-radius: 2rem;
 }
 
@@ -137,9 +135,28 @@ footer{
 
 /*  ################ Usuario Mesero ################  */
 
+/* Barra Navegación del Mesero */
+.navbar-usuario{
+    background-color: #ffffff;
+    height: 100%;
+}
+
+.navbar-usuario ul{
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+    font-size: 1.2rem;
+    padding-left: 0%;
+}
+
+/* Fin de la Barra de navegación del Mesero */
+
+
 /* 
+
 Debe tener su propia barra de navegación con 
 
 
-
 */
+
+/* ################ Usuario Cocinero ################ */
