--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 *{
     text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body{
@@ -87,7 +88,11 @@ hr{
 
 /* Redes Sociales */
 footer{
-    margin-top: 13.5rem;
+    margin-top: 13rem;
+}
+
+footer h2{
+    text-align: center;
 }
 
 #redes ul{
@@ -102,7 +107,12 @@ footer{
 
 .fa-brands{
     color: #000000;
-    width: 1rem;
+    font-size: 2rem;
+}
+
+.fa-brands:hover{
+    color: rgb(255, 145, 0);
+    transform: scale(1.3);
 }
 /*  ################################### Fin Página de Inicio ###################################  */
 
@@ -168,6 +178,7 @@ footer{
     margin: 2rem;
     height: 80vh;
     border: .3125rem solid #000;
+    background-color: #5965B1;
 }
 
 .contenedor-mesas{
@@ -227,6 +238,7 @@ footer{
     width: 12.5rem;
     border: .125rem solid black ;
     border-radius: 9rem;
+    background-color: #ebeaea;
 }
 
 .mesa-rectangular-h{ /* Mesa numero 2 Horizontal */
@@ -295,7 +307,3 @@ footer{
 
 /* Fin Estilos de la barra de Mesa y tiempo */
 
-/* Estilos para los pedidos */
-.pedido{
-
-}
