--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,6 +116,68 @@ footer h2{
 }
 /*  ################################### Fin Página de Inicio ###################################  */
 
+/*  ################################### Página Login ###################################  */
+
+.container-login{
+    display: flex;
+    justify-content: center;
+}
+
+.container-login .cuadro-login{
+    margin-top: 11rem;
+    background-color: #1d2776be;
+    padding: 4rem;
+    border-radius: 0.625rem;
+}
+
+.container-login h2{
+    margin: 0 0 1.875rem;
+    color: #fff;
+    text-align: center;
+    letter-spacing: 0.460rem;
+}
+
+.cuadro-input input{
+    width: 100%;
+    padding: 0.625rem 0;
+    font-size: 1rem;
+    color: #fff;
+    margin-bottom: 1.875rem;
+    border: none;
+    border-bottom: 0.063rem solid #fff;
+    outline: none;
+    background-color: transparent;
+}
+
+.cuadro-input label{
+    font-size: 1.4rem;
+    color: #fff;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.cuadro-login a{
+    margin-left: 15rem;
+}
+
+.cuadro-login button{
+    padding: 1.3rem;
+    border-radius: 0.625rem;
+    background-color: transparent;
+    border: none;
+    font-size: 1rem;
+    color: #f48403;
+    font-weight: bold;
+    transition: .5s;
+    letter-spacing: 0.3rem;
+}
+
+.cuadro-login button:hover{
+    color: #fff;
+    background-color: #f48403;
+}
+
+/*  ################################### Fin Página Login ###################################  */
 
 /*  ################################### Selección de usuario ###################################  */
 
