--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,10 @@ h1{
 }
 
 /* Barra de navegación */
+header{
+    background-color: #fff;
+}
+
 .barra-navegacion {
     background-color: #ffffff;
     display: flex;
@@ -111,7 +115,7 @@ footer h2{
 }
 
 .fa-brands:hover{
-    color: rgb(255, 145, 0);
+    color: #ff9100;
     transform: scale(1.3);
 }
 /*  ################################### Fin Página de Inicio ###################################  */
@@ -240,6 +244,7 @@ footer h2{
     margin: 2rem;
     height: 80vh;
     border: .3125rem solid #000;
+    border-radius: 1rem;
     background-color: #5965B1;
 }
 
@@ -298,7 +303,7 @@ footer h2{
     align-items: center;
     height: 12.5rem;
     width: 12.5rem;
-    border: .125rem solid black ;
+    border: .125rem solid #000000 ;
     border-radius: 9rem;
     background-color: #ebeaea;
 }
